# sgl-cookbook

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SUMMARY.md  docusaurus.config.js  jsconfig.json  package-lock.json  package.json  sidebars.js
.claude/: settings.local.json
.github/workflows/: config-manager-ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  lint.yml  schema-ci.yml
data/models/: README.md  deepseek.yaml  vendors.yaml
data/optimal-configs/: README.md
data/schema/: optimal-config-types.ts  optimal-config.test.ts  package-lock.json  package.json  tsconfig.json  types.test.ts  types.ts
data/scripts/: compile_models.py  compile_optimal_configs.py
diffusion/: README.md
docs/: intro.md
docs/DeepSeek/: DeepSeek-OCR.md  DeepSeek-R1.md  DeepSeek-R1.mdx  DeepSeek-V3.md  DeepSeek-V3_1.md  DeepSeek-V3_2.mdx  _category_.json
docs/Ernie/: Ernie4.5-VL.md  Ernie4.5.md  _category_.json
docs/GLM/: GLM-4.5.md  GLM-4.5V.md  GLM-4.6.mdx  GLM-4.6V.md  GLM-4.6V.mdx  Glyph.md  _category_.json
docs/InternLM/: Intern-S1.md  _category_.json
docs/InternVL/: InternVL3_5.md  _category_.json
docs/Jina/: Jina-reranker-m0.md  _category_.json
docs/Llama/: Llama3.1.md  Llama3.3-70B.md  Llama4-Scout.md  _category_.json
docs/MiniMax/: MiniMax-M2.md  _category_.json
docs/Mistral/: Devstral-2.md  _category_.json
docs/Moonshotai/: Kimi-K2.md  Kimi-K2.mdx  Kimi-Linear.md  _category_.json
static/: robots.txt
tools/config-manager/: README.md  __init__.py  main.py  models.py  prompts.py  pyproject.toml  validate_yaml.py  yaml_handler.py
(+314 files in other folders)
